# remusys-compiler

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: main.rs
src/irgen/: mod.rs  symbol.rs  typing.rs
src/irgen/expr/: array.rs  mod.rs
testing/: exec.sh  testing-ir.sh  testing.sh
