[package]
name = "remusys-compiler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "compiler"
path = "src/main.rs"

[dependencies]
remusys-lang = { path = "../remusys-lang" }
remusys-ir = { path = "../remusys-ir" }
clap = { version="4.5", features=["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
